--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
          <div class="header-content">
              <!-- Add your profile picture here -->
              <img src="sriram.jpg" alt="Your Profile Picture" class="profile-picture">
-             <h1>P.sriramk</h1> 1 Has a conversation. Original line has a conversation.
+             <h1>P.sriram</h1> 1 Has a conversation. Original line has a conversation.
              <p>I am computer science student </p>
          </div>
      </header>
