--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
      <header>
          <div class="header-content">
              <!-- Add your profile picture here -->
-             <img src="sriram.jpg" alt="Your Profile Picture" class="profile-picture">
+             <img src="1738401637293.jpg" alt="Your Profile Picture" class="profile-picture">
              <h1>P.sriram</h1>
              <p>I am computer science student </p>
          </div>
