--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
      </section>
  
      <footer>
-         <p>&copy;
-P.Sriram</p>
+         <p>&copy;2025 Sriram P</p>
      </footer>
  
      <script>
